--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
   "name": "hardhat-project",
   "devDependencies": {
+    "@aave/periphery-v3": "^1.10.0",
     "@chainlink/contracts": "^0.3.1",
     "@nomiclabs/hardhat-ethers": "npm:hardhat-deploy-ethers@^0.3.0-beta.13",
     "@nomiclabs/hardhat-etherscan": "^3.0.0",
     "@nomiclabs/hardhat-waffle": "^2.0.2",
     "@openzeppelin/contracts": "^4.6.0",
-    "chai": "^4.3.4",
+    "@types/chai": "^4.3.1",
+    "@types/mocha": "^9.1.1",
+    "@types/node": "^17.0.41",
+    "chai": "^4.3.6",
     "dotenv": "^14.2.0",
     "ethereum-waffle": "^3.4.0",
     "ethers": "^5.5.3",
@@ -16,7 +20,9 @@
     "hardhat-prettier": "^0.0.1",
     "prettier": "^2.6.2",
     "prettier-plugin-solidity": "^1.0.0-beta.19",
-    "solidity-coverage": "^0.7.18"
+    "solidity-coverage": "^0.7.18",
+    "ts-node": "^10.8.1",
+    "typescript": "^4.7.3"
   },
   "scripts": {
     "test": "hardhat test",
