--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "devDependencies": {
     "@aave/periphery-v3": "^1.10.0",
     "@chainlink/contracts": "^0.3.1",
-    "@nomiclabs/hardhat-ethers": "npm:hardhat-deploy-ethers@^0.3.0-beta.13",
+    "@nomiclabs/hardhat-ethers": "^2.0.6",
     "@nomiclabs/hardhat-etherscan": "^3.0.0",
-    "@nomiclabs/hardhat-waffle": "^2.0.2",
+    "@nomiclabs/hardhat-waffle": "^2.0.6",
     "@openzeppelin/contracts": "^4.6.0",
     "@types/chai": "^4.3.1",
     "@types/mocha": "^9.1.1",
@@ -19,7 +19,7 @@
     "hardhat-gas-reporter": "^1.0.7",
     "hardhat-prettier": "^0.0.1",
     "prettier": "^2.6.2",
-    "prettier-plugin-solidity": "^1.0.0-beta.19",
+    "prettier-plugin-solidity": "^1.0.0",
     "solidity-coverage": "^0.7.18",
     "ts-node": "^10.8.1",
     "typescript": "^4.7.3"
