--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
     "@chainlink/contracts": "^0.3.1",
     "@nomiclabs/hardhat-ethers": "^2.0.6",
     "@nomiclabs/hardhat-etherscan": "^3.0.0",
-    "@nomiclabs/hardhat-waffle": "^2.0.6",
+    "@nomiclabs/hardhat-waffle": "^2.0.3",
     "@openzeppelin/contracts": "^4.6.0",
     "@types/chai": "^4.3.1",
     "@types/mocha": "^9.1.1",
     "@types/node": "^17.0.41",
+    "@uniswap/v3-periphery": "^1.4.1",
     "chai": "^4.3.6",
     "dotenv": "^14.2.0",
     "ethereum-waffle": "^3.4.0",
@@ -30,6 +31,7 @@
     "lint": "solhint 'contracts/*.sol'",
     "lint:fix": "solhint 'contracts/**/*.sol' --fix",
     "format": "prettier --write .",
-    "coverage": "hardhat coverage"
+    "coverage": "hardhat coverage",
+    "build": "hardhat compile"
   }
 }
