--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@nomiclabs/hardhat-etherscan": "^3.0.0",
     "@nomiclabs/hardhat-waffle": "^2.0.3",
     "@openzeppelin/contracts": "^4.6.0",
+    "@typechain/ethers-v5": "^10.1.0",
+    "@typechain/hardhat": "^6.1.0",
     "@types/chai": "^4.3.1",
     "@types/mocha": "^9.1.1",
     "@types/node": "^17.0.41",
@@ -23,6 +25,7 @@
     "prettier-plugin-solidity": "^1.0.0",
     "solidity-coverage": "^0.7.18",
     "ts-node": "^10.8.1",
+    "typechain": "^8.1.0",
     "typescript": "^4.7.3"
   },
   "scripts": {
