--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,6 @@
         "resolveJsonModule": true,
         "strictPropertyInitialization": false
     },
-    "include": ["./scripts", "./test", "./typechain"],
+    "include": ["./scripts", "./test", "./typechain-types"],
     "files": ["./hardhat.config.ts"]
 }
